# ikki

./: .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: android-packages.yml  ci.yml  desktop-packages.yml  ios-packages.yml
docs/: mobile-packaging.md  roadmap-issues.md  ui-ux-style-guide.md  zcash-sync-strategy.md
docs/agents/: README.md
docs/agents/skills/: INDEX.md
docs/architecture/: browser-wasm.md  coding-architecture-guide.md
docs/plans/: 2025-12-19-near-intents-implementation.md  2025-12-19-near-intents-integration-design.md  2025-12-19-near-intents-phase6-implementation.md
skills/: README.md  build-frontend.skill.yaml  setup-ikki-mcp.skill.yaml  setup-node-workspace.skill.yaml  survey-repo.skill.yaml  tauri-dev-session.skill.yaml  ui-copy-change.skill.yaml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: mod.rs  swap.rs  transactions.rs  wallet.rs
src-tauri/src/swap/: address.rs  db.rs  mod.rs  models.rs
src-tauri/src/wallet/: config.rs  core.rs  mod.rs
src/lib/components/: AccountCard.svelte  ActionButton.svelte  AssetSelector.svelte  BottomNav.svelte  Button.svelte  DepositPrompt.svelte  InitialSync.svelte  Input.svelte  PendingTransactionItem.svelte  PriceSparkline.svelte  SwapHistory.svelte  SwapStatus.svelte  SyncIndicator.svelte  Toast.svelte  TransactionItem.svelte
src/lib/services/: near-intents.ts  swapkit.ts
src/lib/stores/: pendingTransactions.ts  preferences.ts  pricing.ts  swap.ts  sync.ts  transactions.ts  ui.ts
src/lib/types/: swap.ts
src/lib/utils/: format.ts  tauri.ts
src/routes/: History.svelte  Home.svelte  Onboarding.svelte  Price.svelte  Receive.svelte  Send.svelte  Settings.svelte  Swap.svelte  TransactionDetail.svelte
tools/ikki-mcp/: README.md  package.json
tools/ikki-mcp/src/: index.ts  types.ts
tools/ikki-mcp/src/tools/: click.ts  screenshot.ts  type.ts  window.ts
tools/ikki-mcp/src/utils/: applescript.ts  window-manager.ts
tools/webzjs-wasm-poc/: Cargo.toml  README.md
tools/webzjs-wasm-poc/js/: webzjs_shim.js
tools/webzjs-wasm-poc/src/: lib.rs
