[package]
name = "ikki"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
authors = ["Abdel"]
publish = false
description = "Ikki - A beautiful Zcash wallet for everyone"

# This makes the crate standalone, not part of parent workspace
[workspace]

[lib]
name = "ikki_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ikki"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2.5", features = [] }

# Async
tokio = { version = "1.44", features = ["full", "sync", "macros", "rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto
hex = "0.4"
bip0039 = "0.12"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Directories
dirs = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# TLS - use ring on mobile for better compatibility
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
rustls = { version = "0.23", features = ["ring"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Zcash - all from the same git revision for compatibility (desktop only)
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs", "orchard"], optional = true }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs", "unstable", "orchard"], optional = true }
zcash_client_memory = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs", "orchard"], optional = true }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", optional = true }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", optional = true }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"], optional = true }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"], optional = true }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", optional = true }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", optional = true }
zip32 = { version = "0.2", optional = true }

# gRPC (desktop only)
tonic = { version = "0.14", features = ["tls-native-roots"], optional = true }
prost = { version = "0.14", optional = true }

# Database (desktop only)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# Time
time = "0.3"
chrono = "0.4"
nonempty = { version = "0.11", optional = true }

# UUID (desktop only for transaction IDs)
uuid = { version = "1.11", features = ["v4"], optional = true }

[features]
default = ["wallet"]
wallet = [
    "zcash_client_backend",
    "zcash_client_sqlite",
    "zcash_client_memory",
    "zcash_protocol",
    "zcash_address",
    "zcash_proofs",
    "zcash_keys",
    "zcash_transparent",
    "zcash_primitives",
    "zip32",
    "tonic",
    "prost",
    "rusqlite",
    "uuid",
    "nonempty",
]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
